--- a/classes/client.html
+++ b/classes/client.html
@@ -122,7 +122,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/eddiewang/siajs-lib/blob/785b3d4/src/lib/client.ts#L17">lib/client.ts:17</a></li>
+									<li>Defined in <a href="https://github.com/eddiewang/siajs-lib/blob/045ac80/src/lib/client.ts#L17">lib/client.ts:17</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -144,7 +144,7 @@
 					<div class="tsd-signature tsd-kind-icon">agent<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">Agent</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/eddiewang/siajs-lib/blob/785b3d4/src/lib/client.ts#L17">lib/client.ts:17</a></li>
+							<li>Defined in <a href="https://github.com/eddiewang/siajs-lib/blob/045ac80/src/lib/client.ts#L17">lib/client.ts:17</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -154,7 +154,7 @@
 					<div class="tsd-signature tsd-kind-icon">config<span class="tsd-signature-symbol">:</span> <a href="../interfaces/clientconfig.html" class="tsd-signature-type">ClientConfig</a></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/eddiewang/siajs-lib/blob/785b3d4/src/lib/client.ts#L15">lib/client.ts:15</a></li>
+							<li>Defined in <a href="https://github.com/eddiewang/siajs-lib/blob/045ac80/src/lib/client.ts#L15">lib/client.ts:15</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -164,7 +164,7 @@
 					<div class="tsd-signature tsd-kind-icon">process<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">ChildProcess</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/eddiewang/siajs-lib/blob/785b3d4/src/lib/client.ts#L16">lib/client.ts:16</a></li>
+							<li>Defined in <a href="https://github.com/eddiewang/siajs-lib/blob/045ac80/src/lib/client.ts#L16">lib/client.ts:16</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -174,7 +174,7 @@
 					<div class="tsd-signature tsd-kind-icon">spawn<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">spawn</span><span class="tsd-signature-symbol"> =&nbsp;spawn</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/eddiewang/siajs-lib/blob/785b3d4/src/lib/client.ts#L14">lib/client.ts:14</a></li>
+							<li>Defined in <a href="https://github.com/eddiewang/siajs-lib/blob/045ac80/src/lib/client.ts#L14">lib/client.ts:14</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -191,7 +191,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/eddiewang/siajs-lib/blob/785b3d4/src/lib/client.ts#L89">lib/client.ts:89</a></li>
+									<li>Defined in <a href="https://github.com/eddiewang/siajs-lib/blob/045ac80/src/lib/client.ts#L87">lib/client.ts:87</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -214,7 +214,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/eddiewang/siajs-lib/blob/785b3d4/src/lib/client.ts#L108">lib/client.ts:108</a></li>
+									<li>Defined in <a href="https://github.com/eddiewang/siajs-lib/blob/045ac80/src/lib/client.ts#L106">lib/client.ts:106</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">Promise</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">any</span><span class="tsd-signature-symbol">&gt;</span></h4>
@@ -231,7 +231,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/eddiewang/siajs-lib/blob/785b3d4/src/lib/client.ts#L104">lib/client.ts:104</a></li>
+									<li>Defined in <a href="https://github.com/eddiewang/siajs-lib/blob/045ac80/src/lib/client.ts#L102">lib/client.ts:102</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">Promise</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">any</span><span class="tsd-signature-symbol">&gt;</span></h4>
@@ -248,7 +248,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/eddiewang/siajs-lib/blob/785b3d4/src/lib/client.ts#L100">lib/client.ts:100</a></li>
+									<li>Defined in <a href="https://github.com/eddiewang/siajs-lib/blob/045ac80/src/lib/client.ts#L98">lib/client.ts:98</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">Promise</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">any</span><span class="tsd-signature-symbol">&gt;</span></h4>
@@ -265,7 +265,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/eddiewang/siajs-lib/blob/785b3d4/src/lib/client.ts#L135">lib/client.ts:135</a></li>
+									<li>Defined in <a href="https://github.com/eddiewang/siajs-lib/blob/045ac80/src/lib/client.ts#L133">lib/client.ts:133</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">string</span></h4>
@@ -282,7 +282,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/eddiewang/siajs-lib/blob/785b3d4/src/lib/client.ts#L115">lib/client.ts:115</a></li>
+									<li>Defined in <a href="https://github.com/eddiewang/siajs-lib/blob/045ac80/src/lib/client.ts#L113">lib/client.ts:113</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -304,7 +304,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/eddiewang/siajs-lib/blob/785b3d4/src/lib/client.ts#L45">lib/client.ts:45</a></li>
+									<li>Defined in <a href="https://github.com/eddiewang/siajs-lib/blob/045ac80/src/lib/client.ts#L45">lib/client.ts:45</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -321,13 +321,13 @@
 					<a name="makerequest" class="tsd-anchor"></a>
 					<h3>make<wbr>Request</h3>
 					<ul class="tsd-signatures tsd-kind-method tsd-parent-kind-class">
-						<li class="tsd-signature tsd-kind-icon">make<wbr>Request<span class="tsd-signature-symbol">(</span>endpoint<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">Url</span>, querystring<span class="tsd-signature-symbol">?: </span><span class="tsd-signature-type">object</span>, method<span class="tsd-signature-symbol">?: </span><span class="tsd-signature-type">string</span>, timeout<span class="tsd-signature-symbol">?: </span><span class="tsd-signature-type">number</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">Promise</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">any</span><span class="tsd-signature-symbol">&gt;</span></li>
+						<li class="tsd-signature tsd-kind-icon">make<wbr>Request<span class="tsd-signature-symbol">(</span>endpoint<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">Url</span>, querystring<span class="tsd-signature-symbol">?: </span><span class="tsd-signature-type">any</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">undefined</span>, method<span class="tsd-signature-symbol">?: </span><span class="tsd-signature-type">string</span>, timeout<span class="tsd-signature-symbol">?: </span><span class="tsd-signature-type">number</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">Promise</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">any</span><span class="tsd-signature-symbol">&gt;</span></li>
 					</ul>
 					<ul class="tsd-descriptions">
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/eddiewang/siajs-lib/blob/785b3d4/src/lib/client.ts#L67">lib/client.ts:67</a></li>
+									<li>Defined in <a href="https://github.com/eddiewang/siajs-lib/blob/045ac80/src/lib/client.ts#L67">lib/client.ts:67</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -336,7 +336,7 @@
 									<h5>endpoint: <span class="tsd-signature-type">string</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">Url</span></h5>
 								</li>
 								<li>
-									<h5><span class="tsd-flag ts-flagOptional">Optional</span> querystring: <span class="tsd-signature-type">object</span></h5>
+									<h5><span class="tsd-flag ts-flagOptional">Optional</span> querystring: <span class="tsd-signature-type">any</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">undefined</span></h5>
 								</li>
 								<li>
 									<h5><span class="tsd-flag ts-flagDefault value">Default value</span> method: <span class="tsd-signature-type">string</span><span class="tsd-signature-symbol"> =&nbsp;&quot;GET&quot;</span></h5>
@@ -359,7 +359,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/eddiewang/siajs-lib/blob/785b3d4/src/lib/client.ts#L141">lib/client.ts:141</a></li>
+									<li>Defined in <a href="https://github.com/eddiewang/siajs-lib/blob/045ac80/src/lib/client.ts#L139">lib/client.ts:139</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
